<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_margin="10dp"
            android:elevation="8dp"
            app:cardBackgroundColor="#4CAF50"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/sacalin2"
                    android:layout_width="match_parent"
                    android:layout_height="265dp"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/Emaile"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginRight="50dp"
                        android:background="@drawable/backgrondtext"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="Enter Emalie"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/passworde"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginRight="50dp"
                        android:background="@drawable/backgrondtext"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="Password"
                        android:inputType="textPassword" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_Login"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/bacgroronbtinprp"
                    android:text="Sing in"
                    android:textStyle="bold"
                    android:textColor="#FFFF" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="253dp" />


    <FrameLayout
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:background="@drawable/cyircelpropopl"
        android:clickable="false"
        android:elevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
        <TextView
            android:gravity="center"
            android:text="login"
            android:textColor="#FFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginRight="5dp"
            android:text="Dont Have an account? Click ?"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="633dp" />

        <TextView

            android:id="@+id/navetoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="SIGNUP"
            android:textAllCaps="true"
            android:textColor="#FF9C27B0"
            android:textSize="17dp"
            tools:layout_editor_absoluteX="221dp"
            tools:layout_editor_absoluteY="627dp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>